# trailbot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  STARTER_PROMPT.md  cpgateway.service  ibgateway.service  pyproject.toml  requirements.txt  trailbot.service
bot/: ibkr.py  main.py  trailing.py  vwap.py
cli/: trailbot.py
docs/: cpapi-migration.md  ibc-2fa-setup.md
