[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trailbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
trailbot = "cli.trailbot:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "bot*"]
